--- a/generator/templates/index.html
+++ b/generator/templates/index.html
@@ -5,7 +5,7 @@
     <title>Password Generator</title>
     <style>
         body {
-            background: url("{% static 'background.jpg' %}") no-repeat center center fixed;
+            background-image: url("{% static 'images/background.jpg' %}"); no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
