--- a/generator/templates/index.html
+++ b/generator/templates/index.html
@@ -5,8 +5,7 @@
     <title>Password Generator</title>
     <style>
         body {
-            background-image: url("{% static 'images\background.jpg' %}"); no-repeat center center fixed;
-            background-size: cover;
+            background: #d3d3d3; /* Light grey background for the entire page */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,10 +14,10 @@
             font-family: Arial, sans-serif;
         }
         .container {
-            background: rgba(255, 255, 255, 0.9);
+            background: #add8e6; /* Light blue background for the flexbox */
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
             width: 350px;
         }
         input, button {
@@ -93,7 +92,6 @@
             </div>
 
             <button type="submit" class="copy-btn">Generate</button>
-
         </form>
 
         {% if password %}
